# htmx-slider

./: app.py  pyproject.toml
.codesandbox/: tasks.json
.devcontainer/: devcontainer.json
public/: global.css  htmx.min.js
templates/: base.html  index.html
templates/services/: base.html  webdesign.html  wordpress.html
